--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <div class="align-center container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-8">
-                <h3 class="mbr-section-title mb-4 mbr-fonts-style display-2"><strong>Top Doctor: Drink This "Potent Tonic" Tonight to Reverse Limpness&nbsp;</strong></h3>
+                <h3 class="mbr-section-title mb-4 mbr-fonts-style display-2"><strong>Men's Health Expert: This "Morning-Night Ritual" Will Make You Rock-Hard On Demand
+</strong></h3>
                 
                 
             </div>
